--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2622,7 +2622,11 @@ Live Coding in Python
 Source: [[https://github.com/donkirkby/live-py-plugin]]
 #+BEGIN_SRC emacs-lisp 
   (use-package live-py-mode
-    :disabled t
+    :general
+    (jag--local-leader-def
+      :keymaps 'python-mode-map
+      :states 'normal
+      "l" 'live-py-mode)
     :diminish)
 #+END_SRC
 
