--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2472,13 +2472,21 @@ Source: [[https://orgmode.org/]]
   (use-package org
     :commands 'org-mode
     :diminish 'org-indent-mode
+    :general
+    (jag--local-leader-def
+      :states 'normal
+      :keymaps 'org-mode-map
+      "e" 'org-edit-special)
+    (jag--local-leader-def
+      :keymaps 'org-src-mode-map
+      "e" 'org-edit-src-exit)
     :config
     (define-key global-map (kbd "C-c c") 'my-org-task-capture)
     (setq org-capture-templates
           '(("a" "My TODO task format." entry
-             (file "~/Dropbox/notes/afrl.org")
+             (file "~/Dropbox/notes/todos.org")
              "* TODO %?
-  SCHEDULED: %t")))
+    SCHEDULED: %t")))
 
     (defun my-org-task-capture ()
       "Capture a task with my default template."
