Added ibuffer to emacs

--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -164,6 +164,7 @@ Setup a leader definer
     "."  'mode-line-other-buffer
     ":"  'eval-expression
     "d"  'kill-this-buffer
+    "B"  'ibuffer
     "i"  'use-package-report
     "I"  'general-describe-keybindings
     "nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
