--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -732,6 +732,8 @@ Source: [[https://github.com/syohex/emacs-helm-ag]]
      helm-do-ag-buffers
      helm-ag-pop-stack
      helm-ag-clear-stack)
+    :general
+    (jag--leader-def "S" 'helm-do-ag)
     :diminish
     :after helm)
 #+END_SRC
