--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2631,9 +2631,11 @@ Python mode
 #+END_QUOTE
 Source: [[https://www.emacswiki.org/emacs/PythonProgrammingInEmacs]]
 #+BEGIN_SRC emacs-lisp
-  (use-package python
-    :disabled t
-    :diminish)
+  (smart-tabs-advice python-indent-line-1 python-indent)
+  (add-hook 'python-mode-hook
+            (lambda ()
+              (setq indent-tabs-mode t)
+              (setq tab-width (default-value 'tab-width))))
 #+END_SRC
 *** anaconda-mode
 #+BEGIN_QUOTE
