--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2635,6 +2635,7 @@ Source: [[https://www.emacswiki.org/emacs/PythonProgrammingInEmacs]]
   (add-hook 'python-mode-hook
             (lambda ()
               (setq indent-tabs-mode t)
+              (setq python-shell-interpreter "python3")
               (setq tab-width (default-value 'tab-width))))
 #+END_SRC
 *** anaconda-mode
