--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -165,7 +165,6 @@ Setup a leader definer
     ":"  'eval-expression
     "d"  'kill-this-buffer
     "B"  'ibuffer
-    "i"  'use-package-report
     "I"  'general-describe-keybindings
     "Nn" 'air-narrow-dwim       ;; Narrow to region and enter normal mode
     "Nw" 'widen
@@ -509,8 +508,20 @@ Multiple cursors for evil-mode
 Source: [[https://github.com/gabesoft/evil-mc]]
 #+BEGIN_SRC emacs-lisp 
   (use-package evil-mc
-    :disabled t
-    :commands (evil-mc-make-cursor-here evil-mc-make-cursor-move-next-line evil-mc-make-cursor-move-prev-line)
+    :commands (evil-mc-make-cursor-here
+               evil-mc-make-all-cursors
+               evil-mc-make-cursor-move-next-line
+               evil-mc-make-cursor-move-prev-line)
+    :general
+    (jag--leader-def
+      "ih" 'evil-mc-make-cursor-here
+      "ij" 'evil-mc-make-cursor-move-next-line
+      "ik" 'evil-mc-make-cursor-move-prev-line
+      "ip" 'evil-mc-pause-cursors
+      "ir" 'evil-mc-resume-cursors
+      "iq" 'evil-mc-undo-all-cursors
+      "iu" 'evil-mc-undo-last-added-cursor
+      "im" 'evil-mc-make-all-cursors)
     :diminish
     :after evil
     :config
