--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -2665,6 +2665,14 @@ Source: [[https://www.emacswiki.org/emacs/PythonProgrammingInEmacs]]
               (setq indent-tabs-mode t)
               (setq python-shell-interpreter "python3")
               (setq tab-width (default-value 'tab-width))))
+  (jag--local-leader-def
+    :keymaps 'python-mode-map
+    "p" 'run-python
+    "f" 'python-shell-send-file
+    "c" 'python-shell-send-buffer
+    "r" 'python-shell-send-region
+    "s" 'python-shell-send-string
+    "o" 'python-shell-switch-to-shell)
 #+END_SRC
 *** anaconda-mode
 #+BEGIN_QUOTE
