Added a label to yasnippet

--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -1154,6 +1154,7 @@ Source: [[https://github.com/abo-abo/auto-yasnippet]]
   (use-package auto-yasnippet
     :general
     (jag--leader-def
+      "Y" '(:wk "yasnippet")
       "Yy" 'aya-create
       "YY" 'aya-create
       "Ye" 'aya-expand
