--- a/configs/emacs.d/init.org
+++ b/configs/emacs.d/init.org
@@ -427,10 +427,7 @@ anzu for evil-mode
 Source: [[https://github.com/syohex/emacs-evil-anzu]]
 #+BEGIN_SRC emacs-lisp 
   (use-package evil-anzu
-    :disabled t
-    :commands 'evil-search-next
-    :diminish
-    :after evil)
+    :after anzu)
 #+END_SRC
 
 *** evil-cleverparens
@@ -1324,9 +1321,12 @@ Source: [[https://github.com/Wilfred/ag.el]]
 Show number of matches in mode-line while searching
 #+END_QUOTE
 Source: [[https://github.com/syohex/emacs-anzu]]
-#+BEGIN_SRC emacs-lisp 
+#+BEGIN_SRC emacs-lisp
+  ;; TODO Find better way to defer package
   (use-package anzu
-    :disabled t
+    :defer 15
+    :config
+    (global-anzu-mode +1)
     :diminish)
 #+END_SRC
 
